# USki

./: .env.example  .env.prod.example  .gitignore  AGENTS.md  CLAUDE.md  DB_SCHEMA.md  PRODUCTION.md  README.md  STARTUP.md  ai_providers.example.json  docker-compose.prod.yml  docker-compose.yml  knowledge.md  package-lock.json  plan.md  skills-lock.json
backend/: .dockerignore  Dockerfile  Dockerfile.prod  api.md  e2e_local.py  pyproject.toml
backend/src/uski/: main.py
backend/src/uski/api/: auth.py  browse.py  cards.py  chat.py  decks.py  dev.py  groups.py  health.py  images.py  import_decks.py  notifications.py  review.py  router.py  shares.py
backend/src/uski/core/: config.py  deps.py  logging.py  security.py  supabase.py
backend/src/uski/repos/: __init__.py  cards.py  chunks.py  decks.py  groups.py  images.py  presence.py  schedules.py  sharing.py
backend/src/uski/schemas/: auth.py  chat.py  deck.py  document.py  file.py  flashcard.py  fsrs.py  sharing.py
backend/src/uski/services/: ai_chat.py  ai_providers.py  auth_identity.py  card_content.py  card_index.py  device_link.py  documents.py  email.py  embeddings.py  files.py  fsrs.py  images.py  import_cards.py  (+9 more)
backend/tests/: conftest.py  test_account_resolution.py  test_auth.py  test_auth_username.py  test_bidirectional.py  test_cards.py  test_chat.py  test_decks.py  test_email.py  test_fsrs.py  test_groups.py  test_images_gc.py  test_import_cards.py  test_issuer.py  test_mock_identity.py  test_mock_social_endpoint.py  test_rag.py  test_review.py  test_sessions.py  test_sharing.py  test_username.py
(+233 files in other folders)
