[project]
name = "uski-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "supabase>=2.15.0",
    "python-jose[cryptography]>=3.3.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "email-validator>=2.0.0",
    "cachetools>=5.5.0",
    "requests>=2.32.0",
    "scalar-fastapi>=1.8.2",
    "openai>=2.41.1",
    "slowapi>=0.1.9",
    "redis>=8.0.0",
    "nh3>=0.2.18",
    "fsrs>=6.0.0",
    "pillow>=11.0.0",
    "python-multipart>=0.0.18",
    "zstandard>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "httpx>=0.28.0",
    "hypothesis>=6.0.0",
]
